--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,13 @@
 ---
 import Navigation from '../components/Navigation.astro'
 import Hamburguer from '../components/Hamburguer.astro'
+import ThemeIcon from './ThemeIcon.astro';
 ---
 
 <header>
   <nav>
     <Hamburguer />
+    <ThemeIcon />
     <Navigation />
   </nav>
 </header>
